--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ app.*.symbols
 app.*.map.json
 .vscode
 .github
+.vscode\mcp.json
 
 # Android Studio will place build artifacts here
 /android/app/debug
