--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,9 +48,16 @@ dependencies:
   image_picker: ^1.1.2
   permission_handler: ^11.3.1
   
+  # Backend
+  supabase_flutter: ^2.5.6
+  
   # Local Storage
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  
+  # JSON Serialization
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.9.0
   
   # UI
   google_fonts: ^6.2.1
@@ -69,6 +76,8 @@ dev_dependencies:
   riverpod_generator: ^2.4.0
   build_runner: ^2.4.11
   hive_generator: ^2.0.1
+  freezed: ^2.5.2
+  json_serializable: ^6.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
