feat(camera): implement full camera flow, permissions, provider, preview & docs
- Add CameraScreen, ImagePreviewScreen, CameraControlsWidget for UI/controls
- Implement CameraNotifier Riverpod provider + generated provider file
- Add PermissionService for runtime camera/storage permission handling
- Integrate image preprocessing using compute() in ImageProcessor and add file-based loader
- Add camera capture, gallery pick, flash toggle and lifecycle handling
- Add AndroidManifest and Info.plist permission/usage descriptions
- Add image preview navigation and capture/confirm flow
- Add large documentation set (PRD, development/testing guides, implementation summary)
- Update .gitignore and .vscode config; remove outdated CHANGELOG.md and top-level DEVELOPMENT_GUIDE.md

--- a/.gitignore
+++ b/.gitignore
@@ -40,9 +40,10 @@ app.*.symbols
 app.*.map.json
 .vscode
 .github
-.vscode\mcp.json
+.vscode
 .env
 .env.local
+AGENTS.md
 
 # Android Studio will place build artifacts here
 /android/app/debug
