--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,21 @@ migrate_working_dir/
 /build/
 /coverage/
 
+# Generated files (build_runner, freezed, riverpod)
+*.g.dart
+*.freezed.dart
+*.mocks.dart
+*.config.dart
+
+# Generated plugin registrants
+**/generated_plugin_registrant.dart
+**/generated_plugin_registrant.cc
+**/generated_plugin_registrant.h
+**/generated_plugins.cmake
+**/GeneratedPluginRegistrant.swift
+**/GeneratedPluginRegistrant.m
+**/GeneratedPluginRegistrant.java
+
 # Symbolication related
 app.*.symbols
 
@@ -56,3 +71,4 @@ AGENTS.md
 assets/models/*.tflite
 assets/models/*.bin
 assets/models/*.gguf
+assets/models/*.task
