--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,9 @@ dependencies:
   flutter_riverpod: ^2.5.1
   riverpod_annotation: ^2.3.5
   
-  # AI/ML
-  tflite_flutter: ^0.9.1
+  # AI/ML - MediaPipe LLM Inference
+  # Note: MediaPipe uses native Android/iOS implementations
+  # Dependencies are configured in platform-specific build files
   image: ^4.2.0
   
   # Camera
