--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   # UI
   google_fonts: ^6.2.1
   flutter_animate: ^4.5.0
+  firebase_core: ^4.2.1
+  firebase_ai: ^3.5.0
 
 dev_dependencies:
   flutter_test:
