--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,10 @@ dependencies:
   image_picker: ^1.1.2
   permission_handler: ^11.3.1
   
-  # Backend
-  supabase_flutter: ^2.5.6
+  # Backend - Firebase
+  firebase_auth: ^6.1.2
+  cloud_firestore: ^6.1.0
+  google_sign_in: ^6.2.2
   
   # Local Storage
   hive: ^2.2.3
