--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   flutter_animate: ^4.5.0
   firebase_core: ^4.2.1
   firebase_ai: ^3.5.0
+  firebase_app_check: ^0.4.1+2
 
 dev_dependencies:
   flutter_test:
