--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,8 @@ dev_dependencies:
   hive_generator: ^2.0.1
   freezed: ^2.5.2
   json_serializable: ^6.8.0
+  fake_cloud_firestore: ^4.0.0
+  mockito: ^5.4.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
