feat: Implement rate limiting for Gemini AI service
- Added RateLimiterService to manage user-level rate limits for recipe generation and ingredient detection.
- Introduced exceptions for rate limit violations: RecipeGenerationHourlyLimitException, RecipeGenerationDailyLimitException, IngredientDetectionHourlyLimitException, IngredientDetectionDailyLimitException.
- Updated GeminiAIService to check rate limits before making API calls.
- Enhanced ingredient detection and recipe generation methods to include user ID for rate limiting.
- Created Firestore rules for user usage tracking in the `user_usage` collection.
- Updated app constants to define rate limits for recipe generations and ingredient detections.
- Modified ingredient detection provider to handle rate limit exceptions gracefully.
- Updated documentation to reflect changes in caching strategy and deployment status.

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ migrate_working_dir/
 /build/
 /coverage/
 /models/
+/documentation/guides/beta
 
 # Generated files (build_runner, freezed, riverpod)
 *.g.dart
