--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -31,8 +31,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
@@ -51,5 +49,20 @@
 	<string>This app needs photo library access to let you select images from your gallery.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>This app needs access to save captured photos.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app does not use the microphone.</string>
+	<key>MinimumOSVersion</key>
+	<string>13.0</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.593064071345-d1tcm7otn1obrdmg7gd98e8pts678bpv</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
