--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dependencies:
   
   # JSON Serialization
   freezed_annotation: ^2.4.1
+  
+  # Date formatting
+  intl: ^0.19.0
   json_annotation: ^4.9.0
   
   # UI
