--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,6 +105,7 @@ flutter:
   assets:
     - assets/models/
     - assets/images/
+    - assets/images/illustrations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
